<resources>
    <string name="app_name">Score Monster</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="prefs_general">General</string>
    <string name="trial">Trial</string>

    <!-- Messages Preferences -->

    <!-- Sync Preferences -->
    <string name="sync_title">Start Clock</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="observer">Observer</string>
    <string name="section">Section</string>
    <string name="timer">Timer</string>
    <string name="starttimer">Start timer</string>
    <string name="timekeeper">Timekeeper</string>
    <string name="name">Name</string>
    <!-- fragment values -->
    <string name="c">C</string>
    <string name="_0">0</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_10">10</string>
    <string name="backSpace">⌫</string>
    <string name="clean">Clean</string>
    <string name="dab">Dab</string>
    <string name="five">Five</string>
    <string name="ten">Ten</string>
    <string name="trial_id">Trial id:</string>
    <string name="save">Save</string>
    <string name="setup">Settings</string>
    <string name="score">Score</string>
    <string name="rider_number">Number</string>
    <string name="button">Click me</string>
    <string name="select_trial">Select trial</string>
</resources>
