<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/prefs_general">
        <ListPreference
            app:entries="@array/trial_names"
            app:entryValues="@array/trial_ids"
            app:key="trial_id"
            app:title="@string/trial"
            app:useSimpleSummaryProvider="true" />

        <SwitchPreferenceCompat
            app:key="isObserver"
            app:title="@string/observer" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/observer"
        app:dependency="isObserver">
        <EditTextPreference
            app:key="name"
            app:title="@string/name"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:key="section"
            app:title="@string/section"
            app:useSimpleSummaryProvider="true" />
        <SwitchPreference
            app:title="Use Score Pad"
            app:key="useScorePad" />
    </PreferenceCategory>
</PreferenceScreen>
