<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <!--tools:context=".com.alexsykes.scoremonsterr.MainActivity.NumberPadFragment" -->


    <Button
        android:id="@+id/button1"
        style="@android:style/Widget.Button"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:onClick="addDigit"
        android:text="@string/_1"
        android:textColor="@color/colorButtonBlue"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/_1" />

    <Button
        android:id="@+id/button2"
        style="@android:style/Widget.Button"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:onClick="addDigit"
        android:text="@string/_2"
        android:textColor="@color/colorButtonBlue"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/button1"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/_2" />

    <Button
        android:id="@+id/button3"
        style="@android:style/Widget.Button"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:onClick="addDigit"
        android:text="@string/_3"
        android:textColor="@color/colorButtonBlue"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/button2"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/_3" />


    <Button
        android:id="@+id/button4"
        style="@android:style/Widget.Button"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:onClick="addDigit"
        android:text="@string/_4"
        android:textColor="@color/colorButtonBlue"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button1" />

    <Button
        android:id="@+id/button5"
        style="@android:style/Widget.Button"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:onClick="addDigit"
        android:text="@string/_5"
        android:textColor="@color/colorButtonBlue"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/button4"
        app:layout_constraintTop_toBottomOf="@+id/button2" />

    <Button
        android:id="@+id/button6"
        style="@android:style/Widget.Button"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:onClick="addDigit"
        android:text="@string/_6"
        android:textColor="@color/colorButtonBlue"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/button5"
        app:layout_constraintTop_toBottomOf="@+id/button3" />


    <Button
        android:id="@+id/button7"
        style="@android:style/Widget.Button"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:onClick="addDigit"
        android:text="@string/_7"
        android:textColor="@color/colorButtonBlue"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button4" />

    <Button
        android:id="@+id/button8"
        style="@android:style/Widget.Button"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:onClick="addDigit"
        android:text="@string/_8"
        android:textColor="@color/colorButtonBlue"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/button7"
        app:layout_constraintTop_toBottomOf="@+id/button5" />

    <Button
        android:id="@+id/button9"
        style="@android:style/Widget.Button"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:onClick="addDigit"
        android:text="@string/_9"
        android:textColor="@color/colorButtonBlue"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/button8"
        app:layout_constraintTop_toBottomOf="@+id/button6" />


    <Button
        android:id="@+id/buttonClear"
        style="@android:style/Widget.Button"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:onClick="addDigit"
        android:text="@string/c"
        android:textColor="@color/colorButtonBlue"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button7" />

    <Button
        android:id="@+id/button0"
        style="@android:style/Widget.Button"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:enabled="true"
        android:onClick="addDigit"
        android:text="@string/_0"
        android:textColor="@color/colorButtonBlue"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/buttonClear"
        app:layout_constraintTop_toBottomOf="@+id/button8" />

    <Button
        android:id="@+id/buttonBack"
        style="@android:style/Widget.Button"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:onClick="addDigit"
        android:text="@string/backSpace"
        android:textColor="@color/colorButtonBlue"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/button0"
        app:layout_constraintTop_toBottomOf="@+id/button9" />

</android.support.constraint.ConstraintLayout>